<resources>
    <string name="app_name">Simple Notes App</string>
    <string name="your_notes_text">Your Notes :</string>
    <string name="cd_no_notes">No notes. Click Add  Button to add a note</string>
    <string name="empty_recycler_text">No Notes</string>
    <string name="cd_add_notes">Add Notes Button</string>
    <string name="exit_cd">Quit Adding Button</string>
    <string name="add_note_activity_title">Add Notes</string>
    <string name="cd_save_note">Add Note Save Button</string>
    <string name="save_button_text">OK</string>
    <string name="note_title">Title</string>
    <string name="note_title_cd">Enter Note Title</string>
    <string name="note_title_hint">Please enter title</string>
    <string name="note_text">Enter Text</string>
    <string name="note_text_cd">Add Note Text</string>
    <string name="note_text_hint">Please enter text</string>
    <string name="done_medicie_cd">Apply Button</string>
    <string name="add_button_text">ADD</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="cd_back_button">Back Button</string>
    <string name="activity_detail_title">Details</string>
    <string name="delete_button">DELETE</string>
    <string name="delete_note_dialog_positive">Yes</string>
    <string name="dialog_delete_negative_button">Cancel</string>
    <string name="delete_note_alert_dialog">Note will be deleted</string>
    <string name="alert_dialog_note_blank">Please enter something</string>
    <string name="add_note_quit_dialog_text">This note won\'t be saved ! Are you sure ?</string>
    <string name="dialog_add_quit_positive_button">Yes</string>
    <string name="dialog_negative_button">CANCEL</string>
    <string name="delete_note_toast">Note Deleted</string>
    <string name="note_saved_success">Note Saved Successfully</string>
</resources>
