<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/widget_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="@color/colorAccent"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/app_name"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray50">

        <ListView
            android:id="@+id/note_widget_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/your_notes_text"
            android:divider="@color/grey_200"
            android:dividerHeight="1dp"
            tools:listitem="@layout/recycler_view_item"/>

        <TextView
            android:id="@+id/empty_view_widget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cd_no_notes"
            android:gravity="center"
            android:text="@string/empty_recycler_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/grey_500"
            android:textStyle="bold"/>

    </FrameLayout>
</LinearLayout>