<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_note_coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/exit_cd"
                    android:onClick="closingDialogFunction"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    app:srcCompat="@drawable/cross"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_note_activity_title"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/cd_save_note"
                    android:onClick="saveNote"
                    android:padding="16dp"
                    android:text="@string/save_button_text"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_200"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/note_title_textview"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:text="@string/note_title"/>

                    <EditText
                        android:id="@+id/note_title_edittext"
                        android:textColor="@color/gray"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/note_title_cd"
                        android:ellipsize="end"
                        android:hint="@string/note_title_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textNoSuggestions"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/add_note_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/add_note_text_title"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:text="@string/note_text"
                        android:layout_weight="0"
                        />

                    <EditText
                        android:id="@+id/add_note_text_edittext"
                        android:textColor="@color/gray"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/note_text_cd"
                        android:hint="@string/note_text_hint"
                        android:inputType="textMultiLine"
                        android:maxLines="10"
                        android:minLines="6"
                        android:scrollbars="vertical"
                        android:gravity="top|left"
                        >

                    </EditText>

                </LinearLayout>
            </android.support.v7.widget.CardView>



            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/done_medicie_cd"
                android:onClick="saveNote"
                android:text="@string/add_button_text"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorAccent"
                android:background="@color/colorAccent"
                ></Button>

            <com.google.android.gms.ads.AdView
                android:id="@+id/ad_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                ads:adSize="BANNER"
                ads:adUnitId="@string/ad_unit_id">
            </com.google.android.gms.ads.AdView>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>